Attribute-dependent state is not updated for changes of certain attributes https://bugs.webkit.org/show_bug.cgi?id=255478 rdar://problem/108078305

Reviewed by Chris Dumez.

Several methods are called in Element::attributeChanged with the expectation that this
method will actually be called for every attribute change:

https://github.com/WebKit/WebKit/blob/c5b51dbe820352229236745ca1208d3eb0bc75df/Source/WebCore/dom/Element.cpp#L2131#L2139

However, Element::attributeChanged is a virtual method, and many subclasses return early
without calling up to Element::changed. For example, HTMLOptionElement::attributeChanged
swallows disabled attribute changes:

https://github.com/WebKit/WebKit/blob/c5b51dbe820352229236745ca1208d3eb0bc75df/Source/WebCore/html/HTMLOptionElement.cpp#L180#L188

This means that the attribute-dependent state updates in Element::attributeChanged will not happen.

This patch fixes this by moving these state updates to `notifyAttributeChanged` which is actually called
for every attribute change. This bug was fixed for accessibility in https://bugs.webkit.org/show_bug.cgi?id=255433
(which introduced `notifyAttributeChanged`).

* Source/WebCore/dom/Element.cpp:
(WebCore::Element::notifyAttributeChanged):
(WebCore::Element::attributeChanged):
* Source/WebCore/dom/Element.h:

Canonical link: https://commits.webkit.org/263005@main