Source/WebCore/dom/Element.h
@@ -309,7 +309,7 @@ public:
 
     // This function is called whenever an attribute is added, changed or removed.
     // Do not call this function directly. notifyAttributeChanged() should be used instead
-    // in order to update accessibility.
+    // in order to update state dependent on attribute changes.
     virtual void attributeChanged(const QualifiedName&, const AtomString& oldValue, const AtomString& newValue, AttributeModificationReason = ModifiedDirectly);
 
     // Only called by the parser immediately after element construction.
